--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,6 +41,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'<p>Hello, World!</p>'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"post test\"\"\"\n",
+    "\n",
+    "r_get = requests.post(f'{BASE_URL}/test',json={\"key\":'value'})\n",
+    "r_get.content"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,31 +72,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTM1NTA2NywianRpIjoiYWRmYTZmMTAtYmQ3Mi00OTI0LWIyNzItZWU1ZGI0M2ExMTNjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MzU1MDY3LCJleHAiOjE2NTkzNTg2Njd9.HQy9f9IJe1tkUWPSTwyWkZOKLA2HSlsDa8yc5Xyh5zg\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTM1NTA2NywianRpIjoiYWRmYTZmMTAtYmQ3Mi00OTI0LWIyNzItZWU1ZGI0M2ExMTNjIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5MzU1MDY3LCJleHAiOjE2NTkzNTg2Njd9.HQy9f9IJe1tkUWPSTwyWkZOKLA2HSlsDa8yc5Xyh5zg'}\n"
+      "token:\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTU0MTEwNiwianRpIjoiNDZhMzliMjktYzVlNy00MTQyLWFkYjItOTZhMTBiNDBkOTI4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NTQxMTA2LCJleHAiOjE2NTk1NDQ3MDZ9.AxXkHBY0W7tkMF_Rn2Am7S6N6ZMOHUYhVLfhj3ehmKU\n",
+      "\n",
+      "cookie:\n",
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTU0MTEwNiwianRpIjoiNDZhMzliMjktYzVlNy00MTQyLWFkYjItOTZhMTBiNDBkOTI4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NTQxMTA2LCJleHAiOjE2NTk1NDQ3MDZ9.AxXkHBY0W7tkMF_Rn2Am7S6N6ZMOHUYhVLfhj3ehmKU'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"Login\"\"\"\n",
     "\n",
-    "r_post = requests.post(f'{BASE_URL}/auth', json={'username': 'admin', 'password': 'admin'})\n",
-    "token = r_post.json()['access_token']\n",
-    "cookies = r_post.cookies.get_dict()\n",
-    "print(token)\n",
-    "print(cookies)"
+    "r_post = requests.post(f'{BASE_URL}/auth', json={'username': 'admin', 'password':'admin'})\n",
+    "if r_post.status_code == 200:\n",
+    "    token = r_post.json()['access_token']\n",
+    "    cookies = r_post.cookies.get_dict()\n",
+    "    print(f'token:\\n{token}\\n')\n",
+    "    print(f'cookie:\\n{cookies}')\n",
+    "else:\n",
+    "    print(r_post.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -125,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"'subs'\"}\n"
+      "{'project_names': []}\n"
      ]
     }
    ],
@@ -144,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,6 +967,32 @@
     "\n",
     "# with open('./test.json', 'r', encoding=\"utf-8\") as i:\n",
     "#     j = json.load(i)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=None b=2 c=2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "from typing import Optional\n",
+    "\n",
+    "\n",
+    "class Model(BaseModel):\n",
+    "    a: Optional[int]\n",
+    "    b: Optional[int] = ...\n",
+    "    c: Optional[int] = Field(...)\n",
+    "\n",
+    "print(Model(b=2, c=2))"
    ]
   }
  ],
