--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -971,28 +971,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a=None b=2 c=2\n"
+     "ename": "ValidationError",
+     "evalue": "1 validation error for ProjectSchemaUpdate\nnew_project_name\n  Cannot use relative path (type=value_error)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\wingman-api\\test\\test.ipynb Cell 46\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=15'>16</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mProjectSchemaUpdate\u001b[39;00m(ProjectSchema):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=16'>17</a>\u001b[0m     new_project_name : \u001b[39mstr\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=18'>19</a>\u001b[0m \u001b[39mprint\u001b[39m(ProjectSchemaUpdate(project_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m\"\u001b[39;49m,new_project_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m..\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
+      "File \u001b[1;32mc:\\Users\\DevilHYT\\miniconda3\\envs\\flask\\lib\\site-packages\\pydantic\\main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for ProjectSchemaUpdate\nnew_project_name\n  Cannot use relative path (type=value_error)"
      ]
     }
    ],
    "source": [
-    "from pydantic import BaseModel, Field\n",
+    "from pydantic import BaseModel, validator\n",
     "from typing import Optional\n",
     "\n",
+    "class ProjectSchema(BaseModel):\n",
+    "    project_name : str\n",
+    "    \n",
+    "    @validator('*')\n",
+    "    def check_relpath(cls, v):\n",
+    "        \"\"\"avoid relative path\"\"\"\n",
     "\n",
-    "class Model(BaseModel):\n",
-    "    a: Optional[int]\n",
-    "    b: Optional[int] = ...\n",
-    "    c: Optional[int] = Field(...)\n",
+    "        check_list = ['..', '/', '\\\\', ':']\n",
+    "        if any(elem in v for elem in check_list):\n",
+    "            raise ValueError('Cannot use relative path')\n",
+    "        return v\n",
     "\n",
-    "print(Model(b=2, c=2))"
+    "class ProjectSchemaUpdate(ProjectSchema):\n",
+    "    new_project_name : str\n",
+    "\n",
+    "print(ProjectSchemaUpdate(project_name=\".\",new_project_name=\"..\"))"
    ]
   }
  ],
