--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTU0MTEwNiwianRpIjoiNDZhMzliMjktYzVlNy00MTQyLWFkYjItOTZhMTBiNDBkOTI4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NTQxMTA2LCJleHAiOjE2NTk1NDQ3MDZ9.AxXkHBY0W7tkMF_Rn2Am7S6N6ZMOHUYhVLfhj3ehmKU\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTYxNTc2NiwianRpIjoiMTE1Njk5OTMtMjk2Yy00MjIzLTk0ZDQtZTNiYjk2MmI0NGRiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NjE1NzY2LCJleHAiOjE2NTk2MTkzNjZ9.0I_MAzHoMz89Uh-_t7X9Wa_iY4gsyicd3U8iXf6vRRc\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTU0MTEwNiwianRpIjoiNDZhMzliMjktYzVlNy00MTQyLWFkYjItOTZhMTBiNDBkOTI4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NTQxMTA2LCJleHAiOjE2NTk1NDQ3MDZ9.AxXkHBY0W7tkMF_Rn2Am7S6N6ZMOHUYhVLfhj3ehmKU'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTYxNTc2NiwianRpIjoiMTE1Njk5OTMtMjk2Yy00MjIzLTk0ZDQtZTNiYjk2MmI0NGRiIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NjE1NzY2LCJleHAiOjE2NTk2MTkzNjZ9.0I_MAzHoMz89Uh-_t7X9Wa_iY4gsyicd3U8iXf6vRRc'}\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': []}\n"
+      "{'project_names': ['project_1']}\n"
      ]
     }
    ],
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': \"[WinError 183] 當檔案已存在時，無法建立該檔案。: 'C:\\\\\\\\Users\\\\\\\\DevilHYT\\\\\\\\Desktop\\\\\\\\github\\\\\\\\wingman-api\\\\\\\\wingman_data\\\\\\\\wingman_projects\\\\\\\\project_1'\"}\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -319,26 +319,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': '1 validation error for IntentObjectSchema\\n__root__\\n  You can only use_entities or ignore_entities for any single intent. (type=value_error)'}\n"
      ]
     }
    ],
    "source": [
     "\"\"\"update intent\"\"\"\n",
-    "r_put = requests.put(f'{BASE_URL}/projects/project_1/intents/intent_1', cookies=cookies, json={'examples': ['string_1']})\n",
+    "r_put = requests.put(f'{BASE_URL}/projects/project_1/intents/intent_1', cookies=cookies, json={'examples': ['string_1'], 'use_entities':['entity_1','entity_2']})\n",
     "print(r_put.json())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_name': []}\n"
+      "{'action_name': ['action_2']}\n"
      ]
     }
    ],
@@ -421,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': 'Action already exist'}\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -678,14 +678,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': 'Story already exist'}\n"
      ]
     }
    ],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': \"'story_1'\"}\n"
      ]
     }
    ],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,42 +971,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValidationError",
-     "evalue": "1 validation error for ProjectSchemaUpdate\nnew_project_name\n  Cannot use relative path (type=value_error)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\DevilHYT\\Desktop\\github\\wingman-api\\test\\test.ipynb Cell 46\u001b[0m in \u001b[0;36m<cell line: 19>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=15'>16</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mProjectSchemaUpdate\u001b[39;00m(ProjectSchema):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=16'>17</a>\u001b[0m     new_project_name : \u001b[39mstr\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/DevilHYT/Desktop/github/wingman-api/test/test.ipynb#ch0000045?line=18'>19</a>\u001b[0m \u001b[39mprint\u001b[39m(ProjectSchemaUpdate(project_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m.\u001b[39;49m\u001b[39m\"\u001b[39;49m,new_project_name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m..\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n",
-      "File \u001b[1;32mc:\\Users\\DevilHYT\\miniconda3\\envs\\flask\\lib\\site-packages\\pydantic\\main.py:341\u001b[0m, in \u001b[0;36mpydantic.main.BaseModel.__init__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mValidationError\u001b[0m: 1 validation error for ProjectSchemaUpdate\nnew_project_name\n  Cannot use relative path (type=value_error)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pydantic.main.ModelMetaclass'>\n"
      ]
     }
    ],
    "source": [
-    "from pydantic import BaseModel, validator\n",
-    "from typing import Optional\n",
+    "from pydantic import BaseModel, Extra, validator\n",
+    "from typing import (Optional, List)\n",
     "\n",
     "class ProjectSchema(BaseModel):\n",
-    "    project_name : str\n",
-    "    \n",
+    "    project_name: Optional[str]\n",
+    "\n",
     "    @validator('*')\n",
     "    def check_relpath(cls, v):\n",
     "        \"\"\"avoid relative path\"\"\"\n",
     "\n",
-    "        check_list = ['..', '/', '\\\\', ':']\n",
+    "        check_list = ['.', '/', '\\\\', ':']\n",
     "        if any(elem in v for elem in check_list):\n",
     "            raise ValueError('Cannot use relative path')\n",
     "        return v\n",
     "\n",
-    "class ProjectSchemaUpdate(ProjectSchema):\n",
-    "    new_project_name : str\n",
-    "\n",
-    "print(ProjectSchemaUpdate(project_name=\".\",new_project_name=\"..\"))"
+    "print(type(ProjectSchema))"
    ]
   }
  ],
