--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTYyMDU4OSwianRpIjoiNDA2M2Y2N2MtNGQ2OC00YjlhLTkwNTktNDZjNzM0MWNhZWNmIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NjIwNTg5LCJleHAiOjE2NTk2MjQxODl9.u9_LlW-0xmbjZ8dYTYpruAmrIrtP2o-JjQW3z9ODzm0\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTcxMTE0OSwianRpIjoiYWFkYTVlYzgtNWM3Yi00MTMxLWI0OTYtNDFkMzM5YWIxY2MyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NzExMTQ5LCJleHAiOjE2NTk3MTQ3NDl9.ZT1kqZQ48tQEnEphVeJYSXEe8etktkZKXLrPB3tCGzs\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTYyMDU4OSwianRpIjoiNDA2M2Y2N2MtNGQ2OC00YjlhLTkwNTktNDZjNzM0MWNhZWNmIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NjIwNTg5LCJleHAiOjE2NTk2MjQxODl9.u9_LlW-0xmbjZ8dYTYpruAmrIrtP2o-JjQW3z9ODzm0'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTcxMTE0OSwianRpIjoiYWFkYTVlYzgtNWM3Yi00MTMxLWI0OTYtNDFkMzM5YWIxY2MyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NzExMTQ5LCJleHAiOjE2NTk3MTQ3NDl9.ZT1kqZQ48tQEnEphVeJYSXEe8etktkZKXLrPB3tCGzs'}\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     "\n",
     "r_post = requests.post(f'{BASE_URL}/auth', json={'username': 'admin', 'password':'admin'})\n",
     "if r_post.status_code == 200:\n",
-    "    token = r_post.json()['access_token']\n",
+    "    token = r_post.json()['access_token'] \n",
     "    cookies = r_post.cookies.get_dict()\n",
     "    print(f'token:\\n{token}\\n')\n",
     "    print(f'cookie:\\n{cookies}')\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_1']}\n"
+      "{'project_names': []}\n"
      ]
     }
    ],
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"[WinError 183] 當檔案已存在時，無法建立該檔案。: 'C:\\\\\\\\Users\\\\\\\\DevilHYT\\\\\\\\Desktop\\\\\\\\github\\\\\\\\wingman-api\\\\\\\\wingman_data\\\\\\\\wingman_projects\\\\\\\\project_1'\"}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': '1 validation error for IntentObjectSchema\\n__root__\\n  You can only use_entities or ignore_entities for any single intent. (type=value_error)'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_name': ['action_2']}\n"
+      "{'action_name': []}\n"
      ]
     }
    ],
@@ -421,14 +421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'Action already exist'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -678,14 +678,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'Story already exist'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"'story_1'\"}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
