--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTcxMTE0OSwianRpIjoiYWFkYTVlYzgtNWM3Yi00MTMxLWI0OTYtNDFkMzM5YWIxY2MyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NzExMTQ5LCJleHAiOjE2NTk3MTQ3NDl9.ZT1kqZQ48tQEnEphVeJYSXEe8etktkZKXLrPB3tCGzs\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTgwMjYwMiwianRpIjoiMjQzZTZmYjYtN2EyOC00ZDJiLTkzMzUtNjA1YTUzNzRjZTc4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODAyNjAyLCJleHAiOjE2NTk4MDYyMDJ9.wMUZSoyrr075DNjGS4ane6hZcKy4qFt2fb4RcvMB4qg\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTcxMTE0OSwianRpIjoiYWFkYTVlYzgtNWM3Yi00MTMxLWI0OTYtNDFkMzM5YWIxY2MyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5NzExMTQ5LCJleHAiOjE2NTk3MTQ3NDl9.ZT1kqZQ48tQEnEphVeJYSXEe8etktkZKXLrPB3tCGzs'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTgwMjYwMiwianRpIjoiMjQzZTZmYjYtN2EyOC00ZDJiLTkzMzUtNjA1YTUzNzRjZTc4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODAyNjAyLCJleHAiOjE2NTk4MDYyMDJ9.wMUZSoyrr075DNjGS4ane6hZcKy4qFt2fb4RcvMB4qg'}\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': []}\n"
+      "{'project_names': ['project_2']}\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_names': []}\n"
+      "{'intent_names': ['intent_1']}\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "{'examples': ['string_1', 'string_2']}\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': 'Intent does not exist'}\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_name': []}\n"
+      "{'action_name': ['action_1']}\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_type': 'response'}\n"
+      "{'action_type': 'response', 'data': [{'text': 'text_1'}, {'text': 'text_2'}]}\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'msg': \"'story_1'\"}\n"
      ]
     }
    ],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -983,22 +983,22 @@
     }
    ],
    "source": [
-    "from pydantic import BaseModel, Extra, validator\n",
-    "from typing import (Optional, List)\n",
+    "# from pydantic import BaseModel, Extra, validator\n",
+    "# from typing import (Optional, List)\n",
     "\n",
-    "class ProjectSchema(BaseModel):\n",
-    "    project_name: Optional[str]\n",
+    "# class ProjectSchema(BaseModel):\n",
+    "#     project_name: Optional[str]\n",
     "\n",
-    "    @validator('*')\n",
-    "    def check_relpath(cls, v):\n",
-    "        \"\"\"avoid relative path\"\"\"\n",
+    "#     @validator('*')\n",
+    "#     def check_relpath(cls, v):\n",
+    "#         \"\"\"avoid relative path\"\"\"\n",
     "\n",
-    "        check_list = ['.', '/', '\\\\', ':']\n",
-    "        if any(elem in v for elem in check_list):\n",
-    "            raise ValueError('Cannot use relative path')\n",
-    "        return v\n",
+    "#         check_list = ['.', '/', '\\\\', ':']\n",
+    "#         if any(elem in v for elem in check_list):\n",
+    "#             raise ValueError('Cannot use relative path')\n",
+    "#         return v\n",
     "\n",
-    "print(type(ProjectSchema))"
+    "# print(type(ProjectSchema))"
    ]
   }
  ],
