--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -80,10 +80,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTgwMjYwMiwianRpIjoiMjQzZTZmYjYtN2EyOC00ZDJiLTkzMzUtNjA1YTUzNzRjZTc4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODAyNjAyLCJleHAiOjE2NTk4MDYyMDJ9.wMUZSoyrr075DNjGS4ane6hZcKy4qFt2fb4RcvMB4qg\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTg4OTEwNCwianRpIjoiY2EwOWM5ZmMtZmMyZC00YmEyLTg3MWQtNmUzOWVmOTU2M2MxIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODg5MTA0LCJleHAiOjE2NTk4OTI3MDR9.M6Na4H2923eNgOPtOxrRxVf3PL313A54bmTIK2uKB-Y\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTgwMjYwMiwianRpIjoiMjQzZTZmYjYtN2EyOC00ZDJiLTkzMzUtNjA1YTUzNzRjZTc4IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODAyNjAyLCJleHAiOjE2NTk4MDYyMDJ9.wMUZSoyrr075DNjGS4ane6hZcKy4qFt2fb4RcvMB4qg'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY1OTg4OTEwNCwianRpIjoiY2EwOWM5ZmMtZmMyZC00YmEyLTg3MWQtNmUzOWVmOTU2M2MxIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjU5ODg5MTA0LCJleHAiOjE2NTk4OTI3MDR9.M6Na4H2923eNgOPtOxrRxVf3PL313A54bmTIK2uKB-Y'}\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -154,14 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'project_names': ['project_2']}\n"
+      "{'project_names': []}\n"
      ]
     }
    ],
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'OK'}\n"
+      "{'Error message': '1 validation error for ProjectNameSchema\\nproject_name\\n  Cannot use relative path (type=value_error)'}\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -262,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'intent_names': ['intent_1']}\n"
+      "{'intent_names': []}\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -300,14 +300,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'examples': ['string_1', 'string_2']}\n"
+      "{}\n"
      ]
     }
    ],
@@ -319,14 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': 'Intent does not exist'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -402,14 +402,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_name': ['action_1']}\n"
+      "{'action_name': []}\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +440,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'action_type': 'response', 'data': [{'text': 'text_1'}, {'text': 'text_2'}]}\n"
+      "{'action_type': 'response'}\n"
      ]
     }
    ],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -898,14 +898,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'msg': \"'story_1'\"}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,17 +971,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pydantic.main.ModelMetaclass'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from pydantic import BaseModel, Extra, validator\n",
     "# from typing import (Optional, List)\n",
