--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'edges': [], 'nodes': [{'computedPosition': {'x': 100, 'y': 100, 'z': 0}, 'dimensions': {'height': 36, 'width': 150}, 'handleBounds': {'source': [{'height': 8, 'id': '1__handle-bottom', 'position': 'bottom', 'width': 8, 'x': 71, 'y': 31}], 'target': [{'height': 8, 'id': '1__handle-top', 'position': 'top', 'width': 8, 'x': 71, 'y': -3}]}, 'id': '1', 'label': 'Node 1', 'position': {'x': 100, 'y': 100}, 'type': 'default'}], 'position': [0, 0], 'zoom': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get a stroy\"\"\"\n",
+    "r_get = requests.get(f'{BASE_URL}/projects/project_1/stories/story_1', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -924,14 +943,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'rule_names': []}\n"
+      "{'rule_names': ['rule_1']}\n"
      ]
     }
    ],
@@ -943,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +981,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'edges': [], 'nodes': [{'computedPosition': {'x': 133, 'y': 119, 'z': 0}, 'dimensions': {'height': 36, 'width': 150}, 'handleBounds': {'source': [{'height': 8, 'id': '1__handle-bottom', 'position': 'bottom', 'width': 8, 'x': 71, 'y': 31}], 'target': [{'height': 8, 'id': '1__handle-top', 'position': 'top', 'width': 8, 'x': 71, 'y': -3}]}, 'id': '1', 'label': 'Node 1', 'position': {'x': 133, 'y': 119}, 'selected': False, 'type': 'default'}], 'position': [-126.92906289092366, -87.27995323994386], 'zoom': 1.319507910772895}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"get a rule\"\"\"\n",
+    "r_get = requests.get(f'{BASE_URL}/projects/project_1/rules/rule_1', cookies=cookies)\n",
+    "print(r_get.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
