--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "b'<p>Hello, World!</p>'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -100,10 +100,10 @@
      "output_type": "stream",
      "text": [
       "token:\n",
-      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA3MTc5OSwianRpIjoiNjhmMmMxZTgtMWM1Mi00MmY0LWI1ZDUtNWFlZWY2ODM0Zjc5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDcxNzk5LCJleHAiOjE2NjAwNzUzOTl9.aY77HnqKzkxBQA2rUt2m9K3mWSUUxn014LlAroO4N3w\n",
+      "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA3MzE1MiwianRpIjoiYTVhNzZlMjAtOGM2NS00NWFhLWEzMjktNDZhYmQxMjA1MzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDczMTUyLCJleHAiOjE2NjAwNzY3NTJ9.o3NdqX8h8dpspiVM4C841sLer0ZrKns2bY3p1I6Kxsc\n",
       "\n",
       "cookie:\n",
-      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA3MTc5OSwianRpIjoiNjhmMmMxZTgtMWM1Mi00MmY0LWI1ZDUtNWFlZWY2ODM0Zjc5IiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDcxNzk5LCJleHAiOjE2NjAwNzUzOTl9.aY77HnqKzkxBQA2rUt2m9K3mWSUUxn014LlAroO4N3w'}\n"
+      "{'access_token_cookie': 'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJmcmVzaCI6ZmFsc2UsImlhdCI6MTY2MDA3MzE1MiwianRpIjoiYTVhNzZlMjAtOGM2NS00NWFhLWEzMjktNDZhYmQxMjA1MzYyIiwidHlwZSI6ImFjY2VzcyIsInN1YiI6MSwibmJmIjoxNjYwMDczMTUyLCJleHAiOjE2NjAwNzY3NTJ9.o3NdqX8h8dpspiVM4C841sLer0ZrKns2bY3p1I6Kxsc'}\n"
      ]
     }
    ],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1255,14 +1255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'tokens': [{'word': '台積', 'start': 0, 'end': 2}, {'word': '電在', 'start': 2, 'end': 4}, {'word': '美國', 'start': 4, 'end': 6}, {'word': '《', 'start': 6, 'end': 7}, {'word': '財富', 'start': 7, 'end': 9}, {'word': '》', 'start': 9, 'end': 10}, {'word': '雜誌', 'start': 10, 'end': 12}, {'word': '評選', 'start': 12, 'end': 14}, {'word': '「', 'start': 14, 'end': 15}, {'word': '全球', 'start': 15, 'end': 17}, {'word': '最大', 'start': 17, 'end': 19}, {'word': '500', 'start': 19, 'end': 22}, {'word': '家', 'start': 22, 'end': 23}, {'word': '公司', 'start': 23, 'end': 25}, {'word': '」', 'start': 25, 'end': 26}, {'word': '排行榜', 'start': 26, 'end': 29}, {'word': '中', 'start': 29, 'end': 30}, {'word': '，', 'start': 30, 'end': 31}, {'word': '依營', 'start': 31, 'end': 33}, {'word': '收規模', 'start': 33, 'end': 36}, {'word': '名列', 'start': 36, 'end': 38}, {'word': '全球', 'start': 38, 'end': 40}, {'word': '第', 'start': 40, 'end': 41}, {'word': '251', 'start': 41, 'end': 44}, {'word': '名', 'start': 44, 'end': 45}, {'word': '。', 'start': 45, 'end': 46}]}\n"
+      "[{'token': '台積', 'start': 0, 'end': 2}, {'token': '電在', 'start': 2, 'end': 4}, {'token': '美國', 'start': 4, 'end': 6}, {'token': '《', 'start': 6, 'end': 7}, {'token': '財富', 'start': 7, 'end': 9}, {'token': '》', 'start': 9, 'end': 10}, {'token': '雜誌', 'start': 10, 'end': 12}, {'token': '評選', 'start': 12, 'end': 14}, {'token': '「', 'start': 14, 'end': 15}, {'token': '全球', 'start': 15, 'end': 17}, {'token': '最大', 'start': 17, 'end': 19}, {'token': '500', 'start': 19, 'end': 22}, {'token': '家', 'start': 22, 'end': 23}, {'token': '公司', 'start': 23, 'end': 25}, {'token': '」', 'start': 25, 'end': 26}, {'token': '排行榜', 'start': 26, 'end': 29}, {'token': '中', 'start': 29, 'end': 30}, {'token': '，', 'start': 30, 'end': 31}, {'token': '依營', 'start': 31, 'end': 33}, {'token': '收規模', 'start': 33, 'end': 36}, {'token': '名列', 'start': 36, 'end': 38}, {'token': '全球', 'start': 38, 'end': 40}, {'token': '第', 'start': 40, 'end': 41}, {'token': '251', 'start': 41, 'end': 44}, {'token': '名', 'start': 44, 'end': 45}, {'token': '。', 'start': 45, 'end': 46}]\n"
      ]
     }
    ],
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1303,14 +1303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Error message': 'Token already exist'}\n"
+      "{'msg': 'OK'}\n"
      ]
     }
    ],
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1484,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
